--- a/youth-center-app/templates/admin/dashboard.html.twig
+++ b/youth-center-app/templates/admin/dashboard.html.twig
@@ -59,7 +59,24 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="col-md-4">
+                <div class="card shadow-sm border-0">
+                    <div class="card-body">
+                        <h5 class="card-title">  Manage Rooms</h5>
+                        <p class="card-text">View or update the Rooms of each center.</p>
+                       <a href="{{ room_crud_url }}" class="btn btn-primary">Go to Rooms</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card shadow-sm border-0">
+                    <div class="card-body">
+                        <h5 class="card-title">  Manage Bookings </h5>
+                        <p class="card-text">View or update the bookings of each center.</p>
+                       <a href="{{ booking_crud_url }}" class="btn btn-primary">Go to Bookings</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
