--- a/youth-center-app/templates/centerdetails/index.html.twig
+++ b/youth-center-app/templates/centerdetails/index.html.twig
@@ -722,12 +722,12 @@
                 {% endif %}
             </div>
             
-            <a href="mailto:{{ center.email|default('info@example.com') }}" class="btn btn-primary" style="margin-top: 2rem;">
-                <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
-                </svg>
-                Get in Touch
-            </a>
+            <a href="{{ path('reservation') }}" class="btn btn-primary" style="margin-top: 2rem;">
+    <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+    </svg>
+    Book a Room
+</a>
         </div>
     </div>
 </section>
