--- a/youth-center-app/templates/centerspage/index.html.twig
+++ b/youth-center-app/templates/centerspage/index.html.twig
@@ -643,8 +643,8 @@
         }
 
         .logo-icon {
-            width: 32px;
-            height: 32px;
+            width: 50px;
+            height: 40px;
             margin-right: 0.5rem;
             background: linear-gradient(135deg,rgb(90, 107, 255),rgb(70, 68, 236));
             border-radius: 8px;
@@ -653,7 +653,7 @@
             justify-content: center;
             color: white;
             font-weight: bold;
-            font-size: 0.8rem;
+            font-size: 0.9rem;
         }
 
         .nav-menu {
@@ -745,8 +745,8 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <a href="#" class="logo">
-                <div class="logo-icon">IT</div>
-                ---
+                <div class="logo-icon">Youth</div>
+                Connect
             </a>
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="{{ path('home') }}" class="nav-link">Home</a></li>
