--- a/youth-center-app/templates/admin/dashboard.html.twig
+++ b/youth-center-app/templates/admin/dashboard.html.twig
@@ -77,6 +77,16 @@
                     </div>
                 </div>
             </div>
+             <div class="col-md-4">
+                <div class="card shadow-sm border-0">
+                    <div class="card-body">
+                        <h5 class="card-title">  Manage Technicians </h5>
+                        <p class="card-text">View or update Technicians available in the area.</p>
+                       <a href="{{ technician_crud_url }}" class="btn btn-primary">Go to Technicians</a>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 {% endblock %}
